# beancount-exporter

./: .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml
.circleci/: config.yml
beancount_exporter/: main.py  utils.py
beancount_exporter/formats/: fbs_processor.py  json_processor.py  pgcopy_processor.py  processor.py
beancount_exporter/formats/pgcopy_processor/: __init__.py  configs.py  data_types.py  extractors.py  processor.py  tables.py  utils.py
tests/: test_main.py  test_pgcopy.py
tests/db/: balance.py  base.py  close.py  commodity.py  custom.py  document.py  entry.py  event.py  note.py  open.py  pad.py  posting.py  price.py  transaction.py
