[tool.poetry]
name = "beancount-exporter"
version = "0.1.2"
description = "Command line tool for exporting Beancount data as JSON"
authors = ["Fang-Pen Lin <fangpen@launchplatform.com>"]
license = "GNU GPLv2"

[tool.poetry.dependencies]
python = "^3.9"
beancount = "^2.3.5"
beancount-data = "^0.1.4"
click = "^8.0.4"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
