[tool.poetry]
name = "beancount-exporter"
version = "2.0.2"
description = "Command line tool for exporting Beancount data as JSON"
authors = ["Fang-Pen Lin <fangpen@launchplatform.com>"]
license = "GNU GPLv2"

[tool.poetry.dependencies]
python = "^3.10"
beancount = "^2.3.5"
beancount-data = "^2.0.0"
click = "^8.0.4"
pgcopy-standalone = "^1.6.0"
orjson = { version = "^3.9.10", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"

[tool.poetry.extras]
pgcopy = ["pgcopy", "orjson"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
